--- a/Clipsy/res/values/strings.xml
+++ b/Clipsy/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Clipsy</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_file_chooser">FileChooser</string>
 
 </resources>
