--- a/Clipsy/res/values/strings.xml
+++ b/Clipsy/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_file_chooser">FileChooser</string>
+    <string name="play_pause">Play/Pause</string>
+    <string name="title_activity_viewer">Viewer</string>
 
 </resources>
